# meme-i-recalled-from-a-video

./: .gitignore  README.md  deploy.sh  package-lock.json  package.json  pyproject.toml
image-search-api-server/: .gitignore  README.md  package-lock.json  package.json  profile_output.prof  tsconfig.json
image-search-api-server/src/: index.ts
image-search-api-server/src/services/: imageSearch.ts
video-processor/: .gitignore  README.md  __init__.py  config.py  frame_processing.py  frame_saver.py  generate_sql.py  main.py  ocr.py  pyproject.toml  scene_detection.py  stt.py  video_processor.py
